hangman images added

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <div class="content-left col">
             <div class="_is-content top show">
                 <div id="lives-remaining-container"> 
-                    <img src="heart-lives.png"/>
+                    <img src="heart-lives.png" alt="lives"/>
                     <div id="lives-wrap"></div>
                 </div>
                 <div id="category-container"></div>
@@ -31,7 +31,9 @@
             </div>
         </div>
         <div class="content-right col">
-            <canvas id="canvas"></canvas>
+            <!-- <canvas id="canvas"></canvas> -->
+            <img class="man-hanging" src="images/1.png" alt="man being hanged"/>
+
         </div>
     </div>
 </body>
