hangman images added

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <!-- <div class="main-title"> -->
-        <h1>The Hangman Game</h1>
+        <h1>Hangman</h1>
         <h3 class="body-font main">Please Select Your Catergory to Play</h3>
     <div class="main-container">
         <!-- change this to columns -->
@@ -32,7 +32,7 @@
         </div>
         <div class="content-right col">
             <!-- <canvas id="canvas"></canvas> -->
-            <img class="man-hanging" src="images/1.png" alt="man being hanged"/>
+            <img class="man-hanging" src="images/7-hangman.png" alt="man being hanged"/>
 
         </div>
     </div>
